# pose_annotation

./: full_3d.json  package.xml  setup.cfg  setup.py
launch/: full_2d.py  full_3d.py  full_position.py  lidar_launch.py  polygon_keepout.py  publish_map.launch.py
maps/: mappp.pgm  mappp.yaml
params/: nav2_custom_params.yaml
pose_annotation/: filter_info_publisher.py  image_publisher.py  label.py  lidar_3d.py  polygon.py  polygon_to_occupancy_grid.py  pose_annotation_node.py  position.py  transform.py
